# textanalsysis

./: README.md  pyproject.toml  text_analysis.py
